# pararell_poisson

./: .clang-format  .gitignore  CMakeLists.txt  README.md  configure.slurm  load.sh  mpi_matrix_a_002.txt  mpi_run.sh  openmp_run.sh  pcgCholErr.txt  posix_run.sh  py_mpi_run.sh  single_run.sh
src/: main.c  mpi.py  mpi_main.c  openmp_main.c  posix_main.c
src/matrix/: matrix.h
src/structures/: list.c  sparse.c  vector.c
src/structures/includes/: list.h  sparse.h  vector.h
